[package]
name = "fsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
criterion = "0.5.1"
filetime = "0.2.23"
human_bytes = "0.4.3"
jwalk = "0.8.1"
rayon = "1.10.0"
tempfile = "3.10.1"

[[bench]]
name = "benchmark"
harness = false
